[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/Entities/Shield.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Entities/Shield/Shield.gd" type="Script" id=2]
[ext_resource path="res://Components/Managers/HealthManager/HealthManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/Collision/Hitbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/Particles/WoodenShard.png" type="Texture" id=5]
[ext_resource path="res://Audio/SFX/ShieldHit.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Block"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -50.0, 10.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Destroy"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 3, 1 ),
"update": 0,
"values": [ 0.0, 400.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.6, 1.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="Curve" id=3]
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.742331 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.671642, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Shield" type="Node2D"]
script = ExtResource( 2 )
durability = 1

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.54955
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Block = SubResource( 1 )
anims/Destroy = SubResource( 5 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
health_manager = NodePath("../HealthManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="HealthManager" parent="." instance=ExtResource( 3 )]
max_health = 1

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 14
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.3
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2( 0, 50 )
initial_velocity = 106.0
linear_accel = -100.0
angle = 720.0
angle_random = 1.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="on_hit" from="Hitbox" to="." method="_on_Hitbox_on_hit"]
[connection signal="health_depleted" from="HealthManager" to="." method="_on_HealthManager_health_depleted"]
